src/main/resources/web/assets/styles/app.css
/* ... */
.CodeMirror-cursor {
  position: absolute;
}

.CodeMirror-measure pre {
  position: static;
}

div.CodeMirror-cursors {
  visibility: hidden;
  position: relative;
  z-index: 3;
}

div.CodeMirror-dragcursors {
  visibility: visible;
}

.CodeMirror-focused div.CodeMirror-cursors {
  visibility: visible;
}

.CodeMirror-selected {
  background: #d9d9d9;
}

.CodeMirror-focused .CodeMirror-selected {
  background: #d7d4f0;
}

.CodeMirror-crosshair {
  cursor: crosshair;
}

.CodeMirror-line::selection,
.CodeMirror-line > span::selection,
.CodeMirror-line > span > span::selection {
  background: #d7d4f0;
}

.CodeMirror-line::-moz-selection,
.CodeMirror-line > span::-moz-selection,
.CodeMirror-line > span > span::-moz-selection {
  background: #d7d4f0;
}

.cm-searching {
  background: #ffa;
  background: rgba(255, 255, 0, .4);
}

/* IE7 hack to prevent it from returning funny offsetTops on the spans */

.CodeMirror span {
  *vertical-align: text-bottom;
}

/* Used to force a border model for a node */

.cm-force-border {
  padding-right: .1px;
}

@media print {
  /* Hide the cursor when printing */

  .CodeMirror div.CodeMirror-cursors {
    visibility: hidden;
  }
}

/* See issue #2901 */

.cm-tab-wrap-hack:after {
  content: '';
}

/* Help users use markselection to safely style text background */

span.CodeMirror-selectedtext {
  background: none;
}
.tab.wrapper {
  float: left;
  z-index: 10;
  position: relative;
  height: 100%;
  cursor: pointer;
}

.tab.top.border.selected {
  height: 23px;
  border-left: 1px solid #858585;
  border-right: 1px solid #858585;
  padding-top: 1px;
}

.tab.top.container.items {
  background: #dddddd none repeat scroll 0 0;
  border-right: 0 solid #d5d5d5;
  border-top: 1px solid #c9c9c9;
  padding: 0;
  box-sizing: border-box;
  height: 100%;
}

.tab.top.container.item {
  float: left;
  height: 100%;
  border-left: 1px solid #b2b2b2;
  border-top: 1px solid #efefef;
  border-bottom: 1px solid #d7d7d7;
  border-right: 1px solid #eaeaea;
  box-sizing: border-box;
  width: 30px;
}

.tab.top.container.item:hover {
  background: #ececec;
}

.tab.text {
  font-size: 9pt;
  color: #6f6f6f;
  line-height: 22px;
  padding-left: 10px;
  padding-right: 10px;
  font-weight: 400;
}

.tab.top.container.selected {
  height: 100%;
  background: #dddddd;
  border-top: 1px solid #efefef;
  box-sizing: border-box;
  border-right: 1px solid #efefef;
}

.tab.bottom.selected {
  background: #dddddd;
  height: 5px;
  width: 100%;
}

.tab.top.border.unselected {
  height: 100%;
  border-right: 1px solid #858585;
  padding-top: 1px;
  border-Bottom: 1px solid #858585;
}

.tab.top.container.unselected {
  background: #dddddd none repeat scroll 0 0;
  border-right: 1px solid #efefef;
  border-top: 1px solid #efefef;
  box-sizing: border-box;
  height: 22px;
}

.tab.top.container.unselected:hover {
  background: #ececec;
}

.tab.bottom.unselected {
  background: #d9d9d9;
  border-top: 1px solid #f5f5f5;
  height: 4px;
  width: 100%;
}

.tab.bg {
  position: absolute;
  bottom: 0px;
  right: 0px;
  left: 0px;
}

.tab.bg .border {
  border-bottom: 1px solid #858585;
  height: 23px;
  width: 100%;
}

.tab.bg .container {
  height: 100%;
  background: #b5b5b5;
  border-top: 2px solid #c9c9c9;
  border-bottom: 1px solid #afafaf;
  box-sizing: border-box;
}

.tab.bg .bottom {
  background: #d9d9d9;
  border-top: 1px solid #f5f5f5;
  height: 4px;
  width: 100%;
}
html,
body {
  margin: 0px;
  padding: 0px;
  font-family: Helvetica, Arial, sans-serif;
  font-style: normal;
  font-weight: normal;
  height: 100%;
}

.breaker {
  background: #454545 none repeat scroll 0 0;
  border-top: 1px solid #585858;
  height: 3px;
  border-bottom: 1px solid #353535;
}

.main {
  top: 80px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  position: absolute;
  background: #dbdbdb;
}

.main .container {
  padding: 10px;
  position: absolute;
  right: 0;
  top: 0;
  left: 61px;
  bottom: 0px;
  border-top: 1px solid #fff;
  border-left: 1px solid #fff;
}

.main .content {
  background: #dbdbdb;
  height: 100%;
  width: 100%;
}

.splitter.vertical {
  height: 10px;
  cursor: row-resize;
}

.splitter.vertical.grabber {
  height: 100%;
  background: #a1a1a1;
  width: 70px;
  margin: 0 auto;
}

.splitter.vertical:hover .grabber {
  background: #91a18e;
}

.splitter.vertical:hover {
  background: #cbdbc6;
}

.splitter.horizontal {
  width: 10px;
  height: 100%;
  cursor: col-resize;
  display: flex;
  flex-direction: column;
  justify-content: center;
  float: left;
  min-height: 88px;
}

.splitter.horizontal.grabber {
  flex: 0 1 70px;
  background: #a1a1a1;
  width: 100%;
}

.splitter.horizontal:hover .grabber {
  background: #91a18e;
}

.splitter.horizontal:hover {
  background: #cbdbc6;
}

.subnav {
  width: 60px;
  height: 100%;
  float: left;
  background: #454545;
  border-right: 1px solid #343434;
}

.subnav ul {
  text-align: left;
  list-style: none;
  margin: 0px;
  padding: 0px;
}

.subnav ul li {
  height: 60px;
  background: #4b4b4b;
  border-top: 1px solid #676767;
  border-left: 1px solid #575757;
  line-height: 55px;
  font-size: 16pt;
  box-sizing: border-box;
  border-right: 1px solid #404040;
  border-bottom: 1px solid #3b3b3b;
  text-align: center;
  color: #c5c5c5;
}

.button {
  cursor: pointer;
}

.subnav ul li:hover {
  background: #565656;
}

.subnav .resizer {
  height: 10px;
  background: #353535;
  border: 0px;
  border-right: 1px solid #2f2f2f;
  background-image: url("/assets/images/subnav_arrow_back.png");
  background-repeat: no-repeat;
  background-position: 94% 37%;
}

.example-enter {
  opacity: 1;
  background: #c6e8a5;
}

.example-enter.example-enter-active {
  opacity: 1;
  background: #fff;
  transition: background-color 300ms ease-in;
}

.example-leave {
  opacity: 1;
}

.example-leave.example-leave-active {
  opacity: 0.01;
  transition: background-color 800ms ease-out 1s;
}
/* ... */

